--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.2",
     "express-router": "^0.0.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "serve-static": "^1.15.0"
   }
 }
